--- a/week4/index.html
+++ b/week4/index.html
@@ -1,14 +1,76 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Bengu's Coffee Shop - Home</title>
+  <meta charset="UTF-8">
+  <title>Reggie's Coffee Shop - Home</title>
 </head>
 
 <body>
-  <h1>Bengu's Coffee shop</h1>
- Welcome to our coffee shop 
+  <!-- 
+    This is a HTML comment 
+    command + / to add or remove a comment  
+    tagname + tab to complete the tag
+    command + right arrow to go to end of line
+    command + left arrow to go to start of line
+    command + up arrow to go to start of the page
+    command + down arrow to go to enf of the page
+    shift + right-left arrow keys to select per character
+    shift + up-down arrow keys to select per line
+    command + shift + left arrow keys to select to the start of the line
+    command + shift + right arrow keys to select to the end of the line
+    alt + right-left arrow keys to jump per word
+    alt + shift + right-left arrow keys to select per word
+    alt + up-down arrow keys to move line of code around
+  -->
+  <!-- Site header -->
+  <header>
+    <h1>Reggie's Coffee Shop</h1>
+    <!-- Adding a navigation -->
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- Main content of the page -->
+  <main>
+    <!-- Adding on page link -->
+    <a href="#treatofweek">Treat of the Week</a>
+    <article>
+
+      <h2>Our Story</h2>
+      <!-- Adding image -->
+      <img src="images/coffee-shop.jpg" alt="coffee cup on pile of coffee beans">
+
+      <p>
+        We are <em>family owned business</em>. Reggie is the <abbr title="Chief Executive Officer">CEO</abbr> and head
+        barista of the shop. Maria is the pastry chef and is in-charge of the bake shop. Celebrating their
+        10<sup>th</sup> anniversary together in December 2021.
+      </p>
+      <h3>Events</h3>
+      </ol>
+      </section>
+      <!-- Adding section for the description list -->
+      <section>
+        <section id="treatofweek">
+          <h3>Treat of the Week</h3>
+          <dl>
+            <dt>Name</dt>
+            <h3>Treat of the Week</h3>
+            </ul>
+            </dd>
+          </dl>
+          <!-- Adding an external link -->
+          <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank">Get the Recipe</a>
+        </section>
+  </main>
+  <!-- Site footer -->
+  <footer>
+    <!-- HTML Entities: https://www.freeformatter.com/html-entities.html -->
+    Copyright &copy; Reggie&apos;s Coffee Shop, 2021
+  </footer>
 </body>
 
 </html>
