--- a/week4/index.html
+++ b/week4/index.html
@@ -21,7 +21,6 @@
     command + shift + right arrow keys to select to the end of the line
     alt + right-left arrow keys to jump per word
     alt + shift + right-left arrow keys to select per word
-    alt + up-down arrow keys to move line of code around
   -->
   <!-- Site header -->
   <header>
@@ -39,35 +38,73 @@
     <!-- Adding on page link -->
     <a href="#treatofweek">Treat of the Week</a>
     <article>
-
       <h2>Our Story</h2>
       <!-- Adding image -->
       <img src="images/coffee-shop.jpg" alt="coffee cup on pile of coffee beans">
-
       <p>
         We are <em>family owned business</em>. Reggie is the <abbr title="Chief Executive Officer">CEO</abbr> and head
         barista of the shop. Maria is the pastry chef and is in-charge of the bake shop. Celebrating their
         10<sup>th</sup> anniversary together in December 2021.
       </p>
-      <h3>Events</h3>
-      </ol>
-      </section>
-      <!-- Adding section for the description list -->
+      <blockquote>
+        We love coffee <cite>- Reggie and Maria</cite>
+      </blockquote>
+      <hr>
       <section>
-        <section id="treatofweek">
-          <h3>Treat of the Week</h3>
-          <dl>
-            <dt>Name</dt>
-            <h3>Treat of the Week</h3>
-            </ul>
-            </dd>
-          </dl>
-          <!-- Adding an external link -->
-          <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank">Get the Recipe</a>
-        </section>
+        <h3>Ottawa</h3>
+        <p>
+          We are a local coffee shop based in Ottawa. Our specialty is <b>organic fair-trade</b> coffee.
+        </p>
+      </section>
+    </article>
+    <aside>
+      <h3>Merchandise</h3>
+      <!-- Adding unordered list for merchandise -->
+      <ul>
+        <li>T-shirts</li>
+        <li>Hats</li>
+        <li>Hoodies</li>
+      </ul>
+    </aside>
+    <!-- Adding section for the ordered list -->
+    <section>
+      <h3>Events</h3>
+      <ol>
+        <li>June 23<sup>rd</sup> - Coffee for Hope Foundation</li>
+        <li>July 17<sup>th</sup> - Live Music</li>
+      </ol>
+    </section>
+    <!-- Adding section for the description list -->
+    <section>
+      <section id="treatofweek"></section>
+      <h3>Treat of the Week</h3>
+      <dl>
+        <dt>Name</dt>
+        <dd>Banana Bread</dd>
+        <dt>Calories</dt>
+        <dd>250</dd>
+        <dt>Ingredients</dt>
+        <dd>
+          <ul>
+            <li>all purpose flour</li>
+            <li>backing soda</li>
+            <li>backing powder</li>
+            <li>salt</li>
+            <li>butter</li>
+            <li>sugar</li>
+            <li>eggs</li>
+            <li>lemon juice</li>
+            <li>bananas</li>
+          </ul>
+        </dd>
+      </dl>
+      <!-- Adding an external link -->
+      <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank">Get the Recipe</a>
+    </section>
   </main>
   <!-- Site footer -->
   <footer>
+    Copyright Reggie's Coffee Shop, 2021
     <!-- HTML Entities: https://www.freeformatter.com/html-entities.html -->
     Copyright &copy; Reggie&apos;s Coffee Shop, 2021
   </footer>
