--- a/week4/index.html
+++ b/week4/index.html
@@ -101,6 +101,34 @@
       <!-- Adding an external link -->
       <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank">Get the Recipe</a>
     </section>
+    <!-- Adding section for menu -->
+    <section>
+      <h3>Menu Specials</h3>
+      <table border>
+        <thead>
+          <tr>
+            <th colspan="2">Items</th>
+            <th rowspan="2">Price</th>
+          </tr>
+          <tr>
+            <th>Name</th>
+            <th>Calories</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Banana Bread</td>
+            <td>250</td>
+            <td>&dollar; 6</td>
+          </tr>
+          <tr>
+            <td>Oatmeal</td>
+            <td>110</td>
+            <td>&dollar; 8</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </main>
   <!-- Site footer -->
   <footer>
