adds changes for index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,35 +1,50 @@
-<! DOCTYPE html>
-  <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Bengu's Introduction</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Bengu's Introduction</title>
+</head>
 
-  <body>
-    <header>
-      <h1>Bengu Erkan</h1>
-    </header>
-    <main>
-      <article>
-        <h2>About Me</h2>
-        <p>My name is Bengu. This is my 2<sup>nd</sup> year of living in Canada. I moved to Canada with my two kids and
-          my spouse. I have a 13 years old daughter and 6 years old son. I live in Ottawa. I am interested in web
-          development. I would like to work as a <em>Web Developer</em> once I complete my program.
-        </p>
-        <P>I graduated with an Industrial Engineering degree. I have 13 years of experience working as an <abbr
-            title="Information Technology">IT</abbr> Business Analyst in banking industry. I decided to build a new
-          career while building a new life in a new country. I would like to have a chance to gain new skills that I
-          have not tried before. Therefore, I am in Interactive Media Design Program.</P>
-        <blockquote>
-          "Your hardest times often lead to the greatest moments of your life. Keep going. Tough situations build strong
-          people in the end." <cite>- Roy T. Bennett</cite>
-        </blockquote>
-      </article>
-    </main>
-    <footer>
-      Copyright Bengu Erkan,2021
-    </footer>
-  </body>
+<body>
+  <header>
+    <h1>Bengu Erkan</h1>
+    <!-- Adding a navigation -->
+    <nav>
+      <ul>
+        <li><a href="index.html">My introduction</a></li>
+        <li><a href="notes.html">My Notes</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <article>
+      <h2>About Me</h2>
+      <img src="images/my-selfie.JPG" alt="Selfie of Bengu Erkan">
+      <p>My name is Bengu. This is my 2<sup>nd</sup> year of living in Canada. I moved to Canada with my two kids and
+        my spouse. I have a 13 years old daughter and 6 years old son. I live in Ottawa. I am interested in web
+        development. I would like to work as a <em>Web Developer</em> once I complete my program.
+      </p>
+      <P>I graduated with an Industrial Engineering degree. I have 13 years of experience working as an <abbr
+          title="Information Technology">IT</abbr> Business Analyst in banking industry. I decided to build a new
+        career while building a new life in a new country. I would like to have a chance to gain new skills that I
+        have not tried before. Therefore, I am in Interactive Media Design Program.</P>
+      <h3>My Hobbies</h3>
+      <!-- Adding unordered list for hobbies -->
+      <ul>
+        <li>Swimming</li>
+        <li>Reading books</li>
+        <li>Walking</li>
+      </ul>
+      <blockquote>
+        "Your hardest times often lead to the greatest moments of your life. Keep going. Tough situations build strong
+        people in the end." <cite>- Roy T. Bennett</cite>
+      </blockquote>
+    </article>
+  </main>
+  <footer>
+    Copyright Bengu Erkan,2021
+  </footer>
+</body>
 
-  </html>
+</html>
