--- a/week5/index.html
+++ b/week5/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Reggie's Coffee Shop - Home</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
   <!-- Main content of the page -->
   <main>
     <!-- Adding on page link -->
-    <a href="#treatofweek">Treat of the Week</a>
+    <a href="#treatofweek" class="orange-link">Treat of the Week</a>
     <article>
       <h2>Our Story</h2>
       <!-- Adding image -->
@@ -46,7 +47,7 @@
         barista of the shop. Maria is the pastry chef and is in-charge of the bake shop. Celebrating their
         10<sup>th</sup> anniversary together in December 2021.
       </p>
-      <blockquote>
+      <blockquote class="large-text">
         We love coffee <cite>- Reggie and Maria</cite>
       </blockquote>
       <hr>
@@ -76,62 +77,63 @@
     </section>
     <!-- Adding section for the description list -->
     <section>
-      <section id="treatofweek"></section>
-      <h3>Treat of the Week</h3>
-      <dl>
-        <dt>Name</dt>
-        <dd>Banana Bread</dd>
-        <dt>Calories</dt>
-        <dd>250</dd>
-        <dt>Ingredients</dt>
-        <dd>
-          <ul>
-            <li>all purpose flour</li>
-            <li>backing soda</li>
-            <li>backing powder</li>
-            <li>salt</li>
-            <li>butter</li>
-            <li>sugar</li>
-            <li>eggs</li>
-            <li>lemon juice</li>
-            <li>bananas</li>
-          </ul>
-        </dd>
-      </dl>
-      <!-- Adding an external link -->
-      <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank">Get the Recipe</a>
-    </section>
-    <!-- Adding section for menu -->
-    <section>
-      <h3>Menu Specials</h3>
-      <table border>
-        <thead>
-          <tr>
-            <th colspan="2">Items</th>
-            <th rowspan="2">Price</th>
-          </tr>
-          <tr>
-            <th>Name</th>
-            <th>Calories</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Banana Bread</td>
-            <td>250</td>
-            <td>&dollar; 6</td>
-          </tr>
-          <tr>
-            <td>Oatmeal</td>
-            <td>110</td>
-            <td>&dollar; 8</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+      <section id="treatofweek">
+        <h3>Treat of the Week</h3>
+        <dl>
+          <dt>Name</dt>
+          <dd>Banana Bread</dd>
+          <dt>Calories</dt>
+          <dd>250</dd>
+          <dt>Ingredients</dt>
+          <dd>
+            <ul>
+              <li>all purpose flour</li>
+              <li>backing soda</li>
+              <li>backing powder</li>
+              <li>salt</li>
+              <li>butter</li>
+              <li>sugar</li>
+              <li>eggs</li>
+              <li>lemon juice</li>
+              <li>bananas</li>
+            </ul>
+          </dd>
+        </dl>
+        <!-- Adding an external link -->
+        <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank"
+          class="orange-link large-text">Get the Recipe</a>
+      </section>
+      <!-- Adding section for menu -->
+      <section>
+        <h3>Menu Specials</h3>
+        <table>
+          <thead>
+            <tr>
+              <th colspan="2">Items</th>
+              <th rowspan="2">Price</th>
+            </tr>
+            <tr>
+              <th>Name</th>
+              <th>Calories</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Banana Bread</td>
+              <td>250</td>
+              <td>&dollar; 6</td>
+            </tr>
+            <tr>
+              <td>Oatmeal</td>
+              <td>110</td>
+              <td>&dollar; 8</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
   </main>
   <!-- Site footer -->
-  <footer>
+  <footer class="site-footer">
     Copyright Reggie's Coffee Shop, 2021
     <!-- HTML Entities: https://www.freeformatter.com/html-entities.html -->
     Copyright &copy; Reggie&apos;s Coffee Shop, 2021
