adds changes related to assignment

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Bengu's Introduction</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
   <header>
-    <h1>Bengu Erkan</h1>
+    <h1 class="site-title">Bengu Erkan</h1>
     <!-- Adding a navigation -->
     <nav>
       <ul>
@@ -20,7 +21,7 @@
   <main>
     <article>
       <h2>About Me</h2>
-      <img src="images/my-selfie.JPG" alt="Selfie of Bengu Erkan">
+      <img src="images/my-selfie.JPG" id="my-image" alt="Selfie of Bengu Erkan">
       <p>My name is Bengu. This is my 2<sup>nd</sup> year of living in Canada. I moved to Canada with my two kids and
         my spouse. I have a 13 years old daughter and 6 years old son. I live in Ottawa. I am interested in web
         development. I would like to work as a <em>Web Developer</em> once I complete my program.
@@ -29,13 +30,15 @@
           title="Information Technology">IT</abbr> Business Analyst in banking industry. I decided to build a new
         career while building a new life in a new country. I would like to have a chance to gain new skills that I
         have not tried before. Therefore, I am in Interactive Media Design Program.</P>
-      <h3>My Hobbies</h3>
+      <section>
+        <h3>My Hobbies</h3>
       <!-- Adding unordered list for hobbies -->
       <ul>
         <li>Swimming</li>
         <li>Reading books</li>
         <li>Walking</li>
       </ul>
+      </section>
       <blockquote>
         "Your hardest times often lead to the greatest moments of your life. Keep going. Tough situations build strong
         people in the end." <cite>- Roy T. Bennett</cite>
