adds changes for midterm assignment

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -9,120 +9,91 @@
 
 <body>
   <!-- Site header -->
-  <header>
-    <h1></h1>
-    <!-- Adding a navigation -->
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
-  </header>
-  <!-- Main content of the page -->
-  <main>
-    <!-- Adding on page link -->
-    <a href="#treatofweek" class="orange-link">Treat of the Week</a>
-    <article>
-      <h2>Our Story</h2>
-      <!-- Adding image -->
-      <img src="images/coffee-shop.jpg" alt="coffee cup on pile of coffee beans">
-      <p>
-        We are <em>family owned business</em>. Reggie is the <abbr title="Chief Executive Officer">CEO</abbr> and head
-        barista of the shop. Maria is the pastry chef and is in-charge of the bake shop. Celebrating their
-        10<sup>th</sup> anniversary together in December 2021.
-      </p>
-      <blockquote class="large-text">
-        We love coffee <cite>- Reggie and Maria</cite>
-      </blockquote>
-      <hr>
-      <section>
-        <h3>Ottawa</h3>
+  <div class="container">
+    <header class="header">
+      <img src="images/lone-starfish-wide.jpg" alt="wide photo of starfish" class="wide-image">
+      <div class="banner">
+        <h1>Lone Starfish</h1>
+      </div>
+      <!-- Adding a navigation -->
+      <div class="navigation">
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">STORY</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
+    </header>
+    <!-- Main content of the page -->
+    <main class="content">
+      <article>
+        <h2>Life of a Starfish</h2>
+        <!-- Adding image -->
+        <img src="images/lone-starfish.jpg" width="180" height="180" alt="photo of starfish" class="small-image">
         <p>
-          We are a local coffee shop based in Ottawa. Our specialty is <b>organic fair-trade</b> coffee.
+          Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa
+          silver
+          driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish
+          mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon
+          archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose
+          knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel
+          Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio
+          dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail
+          jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow
+          weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead
+          catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish.
+          Tadpole
+          cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin
+          knifefish
+          plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth
+          humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false
+          trevally, dottyback.
         </p>
-      </section>
-    </article>
-    <aside>
-      <h3>Merchandise</h3>
-      <!-- Adding unordered list for merchandise -->
-      <ul>
-        <li>T-shirts</li>
-        <li>Hats</li>
-        <li>Hoodies</li>
-      </ul>
-    </aside>
-    <!-- Adding section for the ordered list -->
-    <section>
-      <h3>Events</h3>
-      <ol>
-        <li>June 23<sup>rd</sup> - Coffee for Hope Foundation</li>
-        <li>July 17<sup>th</sup> - Live Music</li>
-      </ol>
-    </section>
-    <!-- Adding section for the description list -->
-    <section>
-      <section id="treatofweek">
-        <h3>Treat of the Week</h3>
-        <dl>
-          <dt>Name</dt>
-          <dd>Banana Bread</dd>
-          <dt>Calories</dt>
-          <dd>250</dd>
-          <dt>Ingredients</dt>
-          <dd>
-            <ul>
-              <li>all purpose flour</li>
-              <li>backing soda</li>
-              <li>backing powder</li>
-              <li>salt</li>
-              <li>butter</li>
-              <li>sugar</li>
-              <li>eggs</li>
-              <li>lemon juice</li>
-              <li>bananas</li>
-            </ul>
-          </dd>
-        </dl>
-        <!-- Adding an external link -->
-        <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" target="_blank"
-          class="orange-link large-text">Get the Recipe</a>
-      </section>
-      <!-- Adding section for menu -->
+        <h3>Facts About Starfish</h3>
+        <!-- Adding unordered list -->
+        <ul>
+          <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
+          <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+          <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
+          <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+        </ul>
+      </article>
       <section>
-        <h3>Menu Specials</h3>
-        <table>
-          <thead>
-            <tr>
-              <th colspan="2">Items</th>
-              <th rowspan="2">Price</th>
-            </tr>
-            <tr>
-              <th>Name</th>
-              <th>Calories</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Banana Bread</td>
-              <td>250</td>
-              <td>&dollar; 6</td>
-            </tr>
-            <tr>
-              <td>Oatmeal</td>
-              <td>110</td>
-              <td>&dollar; 8</td>
-            </tr>
-          </tbody>
-        </table>
+        <h4>Contact to learn more</h4>
+        <!-- adding contact to learn more form -->
+        <form action="contact.html" method="post" class="form">
+          <div>
+            <label for="fullname">Your Name</label>
+            <input type="text" id="fullname" name="fullname">
+          </div>
+          <div>
+            <label for="youremail">Your Email</label>
+            <input type="text" id="youremail" name="youremail">
+          </div>
+          <div>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="4" cols="100"></textarea>
+          </div>
+          <div>
+            <h5>Would you like to visit the starfish?</h5><br>
+            <label for="yes">Yes</label>
+            <input type="radio" id="yes" name="past" value="yes">
+            <label for="no">No</label>
+            <input type="radio" id="no" name="past" value="no">
+            <label for="no">Maybe</label>
+            <input type="radio" id="maybe" name="past" value="maybe">
+          </div>
+          <button type="submit" class="btn">SEND</button>
+        </form>
       </section>
-  </main>
-  <!-- Site footer -->
-  <footer class="site-footer">
-    Copyright Reggie's Coffee Shop, 2021
-    <!-- HTML Entities: https://www.freeformatter.com/html-entities.html -->
-    Copyright &copy; Reggie&apos;s Coffee Shop, 2021
-  </footer>
+    </main>
+    <!-- Adding footer -->
+    <footer>
+      <p class="copyright">
+        © Lone Starfish.
+      </p>
+    </footer>
+  </div> <!-- closing container -->
 </body>
 
 </html>
