adds last style changes

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -71,7 +71,7 @@
             <input type="text" id="youremail" name="youremail">
           </div>
           <div>
-            <label for="message">Message</label>
+            <label for="yourmessage">Your Message</label>
             <textarea id="message" name="message" rows="4" cols="100"></textarea>
           </div>
           <div>
