adds some changes

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -51,19 +51,22 @@
         <main class="content">
 
             <section id="aboutus" class="aboutus">
-                <!--     <div class="aboutuscontent"> -->
-                <img src="images/about-us.jpg" alt="aboutus">
                 <div class="aboutuscontent">
-                    <h2>About Us</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
-                        odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos quaerat
-                        labore. Perferendis cum eaque nemo. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
-                        odio cumque dolorem nisi quisquam.
-                    </p>
+                    <img src="images/about-us.jpg" alt="aboutus">
+                    <div class="aboutuscontent">
+                        <h2>About Us</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
+                            odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
+                            quaerat
+                            labore. Perferendis cum eaque nemo. Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit.
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
+                            odio cumque dolorem nisi quisquam.
+                        </p>
+                    </div>
                 </div>
             </section>
             <div id="services" class="services">
@@ -204,16 +207,18 @@
                         </table>
                     </div>
                     <div class="maps">
-                    <h3>Location</h3>   
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.944738567604!2d-75.75712548465381!3d45.34992777909983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627795138166!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <h3>Location</h3>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.944738567604!2d-75.75712548465381!3d45.34992777909983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627795138166!5m2!1sen!2sca"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
             </section>
         </main>
         <!-- Site footer -->
         <footer class="site-footer">
-            © Copyright Three Star Media, 2020
-            All images are taken from Unsplash
+            <p>© Copyright Three Star Media, 2020</p>
+            <p>All images are taken from Unsplash</p>
         </footer>
 
     </div>
