--- a/final-project/index.html
+++ b/final-project/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three Star Media</title>
+    <!-- Google Fonts Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <!-- Icon Fonts Link -->
     <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -20,7 +24,7 @@
                         <li><a href="#" class="logo"><img src="images/logo.png" alt="Logo" /></a></li>
                         <li><a href="#" class="home">Home</a></li>
                         <li><a href="#aboutus" class="about">About Us</a></li>
-                        <li><a href="#services" class="services">Services</a></li>
+                        <li><a href="#services" class="service">Services</a></li>
                         <li><a href="#team" class="team">Team</a></li>
                         <li><a href="#contact" class="contact">Contact</a></li>
                         <li>
@@ -31,6 +35,8 @@
                                 </form>
                             </div>
                         </li>
+
+
                     </ul>
                 </nav>
                 <div class="banner">
@@ -38,11 +44,11 @@
                     <div class="internalbanner">
                         <h1>Welcome to Three Star Media</h1>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
-                            odio cumque dolorem nisi quisquam. Quia dignissimos libero, inventore odio cumque dolorem
-                            nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos quaerat labore!
+                            Lorem ipsum dolor sit amet, adipisicing elit. Quia dignissimos libero, inventore odio. Quia
+                            dignissimos libero, cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos
+                            enim eos quaerat labore!
                         </p>
-                        <a href="#" class="btn">Connect with us<i class="im im-play"></i></a>
+                        <a href="#" class="btn">Connect with us <i class="im im-play"></i></a>
                     </div>
                 </div>
             </div>
@@ -52,14 +58,13 @@
 
             <section id="aboutus" class="aboutus">
                 <div class="aboutuscontent">
-                    <img src="images/about-us.jpg" alt="aboutus">
-                    <div class="aboutuscontent">
+                    <img src="images/about-us.jpg" alt="aboutuscontent1">
+                    <div class="aboutuscontent2">
                         <h2>About Us</h2>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
                             odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
-                            quaerat
-                            labore. Perferendis cum eaque nemo. Lorem ipsum dolor sit, amet consectetur adipisicing
+                            quaeratlabore. Lorem ipsum dolor sit, amet consectetur adipisicing
                             elit.
                         </p>
                         <p>
@@ -69,157 +74,166 @@
                     </div>
                 </div>
             </section>
-            <div id="services" class="services">
+            <section id="services" class="services">
                 <h2>Our Services</h2>
-                <section class="card">
+                <div class="digital">
                     <img src="images/digital.jpg" alt="digital">
-                    <div class="info">
+                    <div class="digitalinfo">
                         <h3>Digital Transformation</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem autem sint
                             veniam animi omnis asperiores. Quos inventore, consequatur perspiciatis, non corrupti
                             commodi alias beatae autem dolore ut itaque veritatis.</p>
-                        <a href="#" class="btn">Digital Plans<i class="im im-play"></i></a>
+                        <a href="#" class="btn">Digital Plans <i class="im im-play"></i></a>
                     </div>
-                </section><!-- closing card -->
-                <section class="card">
+                </div>
+                <div class="marketing">
                     <img src="images/marketing.jpg" alt="marketing">
-                    <div class="info">
+                    <div class="marketinginfo">
                         <h3>Marketing</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem autem sint
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem autem
+                            sint
                             veniam animi omnis asperiores. Quos inventore, consequatur perspiciatis, non corrupti
                             commodi alias beatae autem dolore ut itaque veritatis.</p>
-                        <a href="#" class="btn">Marketing Plans<i class="im im-play"></i></a>
+                        <a href="#" class="btn">Marketing Plans <i class="im im-play"></i></a>
                     </div>
-                </section><!-- closing card -->
-                <section class="card">
+                </div>
+                <div class="video">
                     <img src="images/video.jpg" alt="video">
-                    <div class="info">
+                    <div class="videoinfo">
                         <h3>Video Production</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem autem sint
-                            veniam animi omnis asperiores. Quos inventore, consequatur perspiciatis, non corrupti
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem
+                            autem
+                            sint
+                            veniam animi omnis asperiores. Quos inventore, consequatur perspiciatis, non
+                            corrupti
                             commodi alias beatae autem dolore ut itaque veritatis.</p>
-                        <a href="#" class="btn">Video Plans<i class="im im-play"></i></a>
+                        <a href="#" class="btn">Video Plans <i class="im im-play"></i></a>
                     </div>
-                </section><!-- closing card -->
-                <section class="card">
+                </div>
+                <div class="web">
                     <img src="images/web.jpg" alt="web">
-                    <div class="info">
+                    <div class="webinfo">
                         <h3>Web Development</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem autem sint
-                            veniam animi omnis asperiores. Quos inventore, consequatur perspiciatis, non corrupti
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem
+                            autem sint
+                            veniam animi omnis asperiores. Quos inventore, consequatur perspiciatis, non
+                            corrupti
                             commodi alias beatae autem dolore ut itaque veritatis.</p>
-                        <a href="#" class="btn">Web Plans<i class="im im-play"></i></a>
+                        <a href="#" class="btn">Web Plans <i class="im im-play"></i></a>
                     </div>
-                </section><!-- closing card -->
-                <section class="card">
+                </div>
+                <div class="print">
                     <img src="images/print.jpg" alt="print">
-                    <div class="info">
+                    <div class="printinfo">
                         <h3>Print</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem autem sint
-                            veniam animi omnis asperiores. Quos inventore, consequatur perspiciatis, non corrupti
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatem
+                            autem sint
+                            veniam animi omnis asperiores. Quos inventore, consequatur perspiciatis, non
+                            corrupti
                             commodi alias beatae autem dolore ut itaque veritatis.</p>
-                        <a href="#" class="btn">Print Plans<i class="im im-play"></i></a>
+                        <a href="#" class="btn">Print Plans <i class="im im-play"></i></a>
                     </div>
-                </section><!-- closing card -->
+                </div>
+            </section><!-- closing card -->
+    
+    <section id="ourvision" class="ourvision">
+        <div class="ourvisioncontent">
+            <h3>Our Vision</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
+                odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos quaerat
+                labore. Perferendis cum eaque nemo.
+            </p>
+            <a href="#" class="btn">Learn More<i class="im im-play"></i></a>
+        </div>
+    </section>
+    <section id="team" class="team">
+        <div class="ourteamcontent">
+            <h2>Our Team</h2>
+            <div class="image-john">
+                <img src="images/john.jpg" alt="john">
             </div>
-            <section id="ourvision" class="ourvision">
-                <div class="ourvisioncontent">
-                    <h3>Our Vision</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
-                        odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos quaerat
-                        labore. Perferendis cum eaque nemo.
-                    </p>
-                    <a href="#" class="btn">Learn More<i class="im im-play"></i></a>
-                </div>
-            </section>
-            <section id="team" class="team">
-                <div class="ourteamcontent">
-                    <h2>Our Team</h2>
-                    <div class="image-john">
-                        <img src="images/john.jpg" alt="john">
+            <div class="ourteamjohn">
+                <h3>John Doe</h3>
+                <h4>CEO and Co-owner</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
+                    odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
+                    quaerat labore. Perferendis cum eaque nemo.
+                </p>
+            </div>
+            <div class="image-bob">
+                <img src="images/bob.jpg" alt="john">
+            </div>
+            <div class="ourteambob">
+                <h3>Bob Rite</h3>
+                <h4>CFO and Co-owner</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
+                    odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
+                    quaerat labore. Perferendis cum eaque nemo.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="contact">
+        <div class="contactuscontent">
+            <h2>Contact Us</h2>
+            <div class="form">
+                <h3>Send us a message</h3>
+                <!-- adding a form -->
+                <form action="thanks.html" method="post">
+                    <div>
+                        <label for="fullname">Full Name</label>
+                        <input type="text" id="fullname" name="fullname">
                     </div>
-                    <div class="ourteamjohn">
-                        <h3>John Doe</h3>
-                        <h4>CEO and Co-owner</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
-                            odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
-                            quaerat labore. Perferendis cum eaque nemo.
-                        </p>
+                    <div>
+                        <label for="youremail">Email</label>
+                        <input type="email" id="youremail" name="youremail" required>
                     </div>
-                    <div class="image-bob">
-                        <img src="images/bob.jpg" alt="john">
+                    <div>
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message"></textarea>
                     </div>
-                    <div class="ourteambob">
-                        <h3>Bob Rite</h3>
-                        <h4>CFO and Co-owner</h4>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
-                            odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
-                            quaerat labore. Perferendis cum eaque nemo.
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <section id="contact" class="contact">
-                <div class="contactuscontent">
-                    <h2>Contact Us</h2>
-                    <div class="form">
-                        <h3>Send us a message</h3>
-                        <!-- adding a form -->
-                        <form action="thanks.html" method="post">
-                            <div>
-                                <label for="fullname">Full Name</label>
-                                <input type="text" id="fullname" name="fullname">
-                            </div>
-                            <div>
-                                <label for="youremail">Email</label>
-                                <input type="email" id="youremail" name="youremail" required>
-                            </div>
-                            <div>
-                                <label for="message">Message</label>
-                                <textarea id="message" name="message"></textarea>
-                            </div>
-                            <button type="submit">Send</button>
-                        </form>
-                    </div>
-                    <div class="table">
-                        <!-- Adding table for hours -->
-                        <table>
-                            <caption>Hours of Operation</caption>
-                            <thead>
-                                <tr>
-                                    <th>Days</th>
-                                    <th>Hours</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Monday - Friday</td>
-                                    <td>9 AM - 6 PM</td>
-                                </tr>
-                                <tr>
-                                    <td>Saturday - Sunday</td>
-                                    <td>Closed</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="maps">
-                        <h3>Location</h3>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.944738567604!2d-75.75712548465381!3d45.34992777909983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627795138166!5m2!1sen!2sca"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <!-- Site footer -->
-        <footer class="site-footer">
-            <p>© Copyright Three Star Media, 2020</p>
-            <p>All images are taken from Unsplash</p>
-        </footer>
+                    <button type="submit">Send</button>
+                </form>
+            </div>
+            <div class="table">
+                <!-- Adding table for hours -->
+                <table>
+                    <caption>Hours of Operation</caption>
+                    <thead>
+                        <tr>
+                            <th>Days</th>
+                            <th>Hours</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Monday - Friday</td>
+                            <td>9 AM - 6 PM</td>
+                        </tr>
+                        <tr>
+                            <td>Saturday - Sunday</td>
+                            <td>Closed</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="maps">
+                <h3>Location</h3>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.944738567604!2d-75.75712548465381!3d45.34992777909983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627795138166!5m2!1sen!2sca"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+    </section>
+    </main>
+    <!-- Site footer -->
+    <footer class="site-footer">
+        <p>© Copyright Three Star Media, 2020</p>
+        <p>All images are taken from Unsplash</p>
+    </footer>
 
     </div>
 </body>
