--- a/final-project/index.html
+++ b/final-project/index.html
@@ -135,105 +135,105 @@
                     </div>
                 </div>
             </section><!-- closing card -->
-    
-    <section id="ourvision" class="ourvision">
-        <div class="ourvisioncontent">
-            <h3>Our Vision</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
-                odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos quaerat
-                labore. Perferendis cum eaque nemo.
-            </p>
-            <a href="#" class="btn">Learn More<i class="im im-play"></i></a>
-        </div>
-    </section>
-    <section id="team" class="team">
-        <div class="ourteamcontent">
-            <h2>Our Team</h2>
-            <div class="image-john">
-                <img src="images/john.jpg" alt="john">
-            </div>
-            <div class="ourteamjohn">
-                <h3>John Doe</h3>
-                <h4>CEO and Co-owner</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
-                    odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
-                    quaerat labore. Perferendis cum eaque nemo.
-                </p>
-            </div>
-            <div class="image-bob">
-                <img src="images/bob.jpg" alt="john">
-            </div>
-            <div class="ourteambob">
-                <h3>Bob Rite</h3>
-                <h4>CFO and Co-owner</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
-                    odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
-                    quaerat labore. Perferendis cum eaque nemo.
-                </p>
-            </div>
-        </div>
-    </section>
-    <section id="contact" class="contact">
-        <div class="contactuscontent">
-            <h2>Contact Us</h2>
-            <div class="form">
-                <h3>Send us a message</h3>
-                <!-- adding a form -->
-                <form action="thanks.html" method="post">
-                    <div>
-                        <label for="fullname">Full Name</label>
-                        <input type="text" id="fullname" name="fullname">
+
+            <section id="ourvision" class="ourvision">
+                <div class="ourvisioncontent">
+                    <h3>Our Vision</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
+                        odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos quaerat
+                        labore. Perferendis cum eaque nemo.
+                    </p>
+                    <a href="#" class="btnvision">Learn More <i class="im im-play"></i></a>
+                </div>
+            </section>
+            <section id="team" class="team">
+                <div class="ourteamcontent">
+                    <h2>Our Team</h2>
+                    <div class="image-john">
+                        <img src="images/john.jpg" alt="john">
                     </div>
-                    <div>
-                        <label for="youremail">Email</label>
-                        <input type="email" id="youremail" name="youremail" required>
+                    <div class="ourteamjohn">
+                        <h3>John Doe</h3>
+                        <h4>CEO and Co-owner</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
+                            odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
+                            quaerat labore. Perferendis cum eaque nemo.
+                        </p>
                     </div>
-                    <div>
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message"></textarea>
+                    <div class="image-bob">
+                        <img src="images/bob.jpg" alt="john">
                     </div>
-                    <button type="submit">Send</button>
-                </form>
-            </div>
-            <div class="table">
-                <!-- Adding table for hours -->
-                <table>
-                    <caption>Hours of Operation</caption>
-                    <thead>
-                        <tr>
-                            <th>Days</th>
-                            <th>Hours</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Monday - Friday</td>
-                            <td>9 AM - 6 PM</td>
-                        </tr>
-                        <tr>
-                            <td>Saturday - Sunday</td>
-                            <td>Closed</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="maps">
-                <h3>Location</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.944738567604!2d-75.75712548465381!3d45.34992777909983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627795138166!5m2!1sen!2sca"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-        </div>
-    </section>
-    </main>
-    <!-- Site footer -->
-    <footer class="site-footer">
-        <p>© Copyright Three Star Media, 2020</p>
-        <p>All images are taken from Unsplash</p>
-    </footer>
+                    <div class="ourteambob">
+                        <h3>Bob Rite</h3>
+                        <h4>CFO and Co-owner</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
+                            odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
+                            quaerat labore. Perferendis cum eaque nemo.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section id="contact" class="contact">
+                <div class="contactuscontent">
+                    <h2>Contact Us</h2>
+                    <div class="form">
+                        <h3>Send us a message</h3>
+                        <!-- adding a form -->
+                        <form action="thanks.html" method="post">
+                            <div>
+                                <label for="fullname">Full Name</label>
+                                <input type="text" id="fullname" name="fullname">
+                            </div>
+                             <div>
+                                <label for="youremail">Email</label>
+                                <input type="text" id="youremail" name="youremail">
+                            </div>
+                            <div>
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" rows="4" cols="50"></textarea>
+                            </div>
+                            <button type="submit" class="sbmtbtn">Send</button>
+                        </form>
+                    </div>
+                    <div class="table">
+                        <!-- Adding table for hours -->
+                        <table>
+                            <caption>Hours of Operation</caption>
+                            <thead>
+                                <tr>
+                                    <th>Days</th>
+                                    <th>Hours</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Monday - Friday</td>
+                                    <td>9 AM - 6 PM</td>
+                                </tr>
+                                <tr>
+                                    <td>Saturday - Sunday</td>
+                                    <td>Closed</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="maps">
+                        <h3>Location</h3>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.944738567604!2d-75.75712548465381!3d45.34992777909983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1627795138166!5m2!1sen!2sca"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <!-- Site footer -->
+        <footer class="site-footer">
+            <p>© Copyright Three Star Media, 2020</p>
+            <p>All images are taken from Unsplash</p>
+        </footer>
 
     </div>
 </body>
