--- a/final-project/index.html
+++ b/final-project/index.html
@@ -156,6 +156,7 @@
                     <div class="ourteamjohn">
                         <h3>John Doe</h3>
                         <h4>CEO and Co-owner</h4>
+                        <hr>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
                             odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
@@ -168,6 +169,7 @@
                     <div class="ourteambob">
                         <h3>Bob Rite</h3>
                         <h4>CFO and Co-owner</h4>
+                        <hr>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dignissimos libero, inventore
                             odio cumque dolorem nisi quisquam. Voluptatum cum praesentium excepturi quos enim eos
@@ -193,13 +195,14 @@
                             </div>
                             <div>
                                 <label for="message">Message</label>
-                                <textarea id="message" name="message" rows="4" cols="50"></textarea>
+                                <textarea id="message" name="message" rows="6" cols="50"></textarea>
                             </div>
                             <button type="submit" class="sbmtbtn">Send</button>
                         </form>
                     </div>
                     <div class="table">
                         <!-- Adding table for hours -->
+               
                         <table>
                             <caption>Hours of Operation</caption>
                             <thead>
@@ -210,12 +213,12 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Monday - Friday</td>
-                                    <td>9 AM - 6 PM</td>
+                                    <td>   Monday - Friday   </td>
+                                    <td>   9 AM - 6 PM   </td>
                                 </tr>
                                 <tr>
-                                    <td>Saturday - Sunday</td>
-                                    <td>Closed</td>
+                                    <td>   Saturday - Sunday   </td>
+                                    <td>   Closed   </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -231,8 +234,10 @@
         </main>
         <!-- Site footer -->
         <footer class="site-footer">
+            <div class="footer-content">
             <p>© Copyright Three Star Media, 2020</p>
-            <p>All images are taken from Unsplash</p>
+            <p>All images are taken from <u>Unsplash</u></p>
+            </div>
         </footer>
 
     </div>
