adds changes for html

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -201,8 +201,8 @@
                         </form>
                     </div>
                     <div class="table">
-                        <!-- Adding table for hours -->
-               
+                        <!-- Adding table  -->
+            
                         <table>
                             <caption>Hours of Operation</caption>
                             <thead>
