adds some comments

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -201,7 +201,7 @@
                         </form>
                     </div>
                     <div class="table">
-                        <!-- Adding table  -->
+                        <!-- Adding table for  -->
             
                         <table>
                             <caption>Hours of Operation</caption>
